k8s/itd_net-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: itd_net
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/itd_net: "true"
  podSelector:
    matchLabels:
      io.kompose.network/itd_net: "true"
